# firewood

./: DESIGN.md  README.md  index.html  package-lock.json  package.json
.github/prompts/: release.prompt.md  update-docs.prompt.md
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/AboutDialog/: AboutDialog.module.css  index.tsx
src/components/FontSizeControl/: FontSizeControl.module.css  index.tsx
src/components/Sidebar/: Sidebar.module.css  index.tsx
src/components/ToolLayout/: ToolLayout.module.css  index.tsx
src/components/Updater/: index.tsx
src/hooks/: useEditorFontSize.ts  useResizablePanels.ts  useToolOrder.ts  useToolVisibility.ts
src/router/: tools.tsx
src/tools/base64-codec/: index.tsx
src/tools/hash/: Hash.module.css  index.tsx
src/tools/img-to-pdf/: ImgToPdf.module.css  index.tsx
src/tools/json-formatter/: index.tsx
src/tools/notepad/: index.tsx
src/tools/text-diff/: TextDiff.module.css  index.tsx
src/tools/timestamp/: Timestamp.module.css  index.tsx
src/tools/translate/: index.tsx
src/tools/url-codec/: index.tsx
src/types/: tool.ts
src/utils/: updateNotes.ts
